// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore history from sessionStorage:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "url": "/",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/third",
    "search": "",
    "state": Object {},
    "url": "/third",
  },
]
`;

exports[`restore history from sessionStorage:  - history_entries 2`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": Object {},
    "url": "/",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/third",
    "search": "",
    "state": Object {},
    "url": "/third",
  },
]
`;

exports[`restore history from sessionStorage:  - history_index 1`] = `1`;

exports[`restore history from sessionStorage:  - history_index 2`] = `0`;

exports[`restore history from sessionStorage:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "back",
    "length": 3,
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
      ],
      "hash": "",
      "index": 2,
      "kind": "load",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`restore history from sessionStorage:  - response 2`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": null,
    "index": 0,
    "kind": "back",
    "length": 3,
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "backward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "back",
      "length": 3,
      "params": Object {},
      "pathname": "/second",
      "pop": true,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`restore history from sessionStorage:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`restore history from sessionStorage:  - routes - NEVER_USED_PATHLESS - thunk 2`] = `0`;

exports[`restore history from sessionStorage:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`restore history from sessionStorage:  - routes - REDIRECTED - onComplete 2`] = `0`;

exports[`restore history from sessionStorage:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "back",
    "length": 3,
    "params": Object {},
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
      ],
      "hash": "",
      "index": 2,
      "kind": "load",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`restore history from sessionStorage:  - state 2`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "back",
    "length": 3,
    "params": Object {},
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "backward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "back",
      "length": 3,
      "params": Object {},
      "pathname": "/second",
      "pop": true,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "FIRST",
}
`;

exports[`restore history from sessionStorage:  - title 1`] = `"SECOND"`;

exports[`restore history from sessionStorage:  - title 2`] = `"FIRST"`;
